--- a/requirements.txt
+++ b/requirements.txt
@@ -1,143 +1,104 @@
-absl-py==2.0.0
-albumentations==1.3.1
-anyio==3.7.1
+anyio==4.2.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
-astunparse==1.6.3
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
 attrs==23.2.0
-backcall==0.2.0
+Babel==2.14.0
 beautifulsoup4==4.12.2
-bleach==6.0.0
-cachetools==5.3.2
-certifi==2023.11.17
-cffi==1.15.1
-charset-normalizer==3.3.2
+bleach==6.1.0
+blinker==1.6.2
+certifi==2023.7.22
+cffi==1.16.0
+chardet==3.0.4
+charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
-comm==0.1.4
-cycler==0.11.0
-DateTime==5.4
-debugpy==1.7.0
+comm==0.2.1
+debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
-entrypoints==0.4
-exceptiongroup==1.2.0
+dominate==2.8.0
+executing==2.0.1
 fastjsonschema==2.19.1
-Flask==2.2.5
-flatbuffers==23.5.26
-fonttools==4.38.0
-gast==0.4.0
-google-auth==2.26.1
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.60.0
-h5py==3.8.0
+Flask==2.3.2
+Flask-Bootstrap==3.3.7.1
+fqdn==1.5.1
 idna==3.6
-imageio==2.31.2
-importlib-metadata==6.7.0
-importlib-resources==5.12.0
-ipykernel==6.16.2
-ipython==7.34.0
-ipython-genutils==0.2.0
-ipywidgets==8.1.1
+ipykernel==6.28.0
+ipython==8.19.0
+isoduration==20.11.0
 itsdangerous==2.1.2
 jedi==0.19.1
 Jinja2==3.1.2
-joblib==1.3.2
-jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-server==1.24.0
-jupyter_client==7.4.9
-jupyter_core==4.12.0
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.9
-keras==2.11.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.5
-libclang==16.0.6
-Markdown==3.4.4
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
+jupyter-events==0.9.0
+jupyter-lsp==2.2.1
+jupyter_client==8.6.0
+jupyter_core==5.7.0
+jupyter_server==2.12.2
+jupyter_server_terminals==0.5.1
+jupyterlab==4.0.10
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.2
 MarkupSafe==2.1.3
-matplotlib==3.5.3
 matplotlib-inline==0.1.6
 mistune==3.0.2
-nbclassic==1.0.0
-nbclient==0.7.4
-nbconvert==7.6.0
-nbformat==5.8.0
+mysql-connector-python==8.1.0
+nbclient==0.9.0
+nbconvert==7.14.0
+nbformat==5.9.2
 nest-asyncio==1.5.8
-networkx==2.6.3
-notebook==6.5.6
+notebook==7.0.6
 notebook_shim==0.2.3
-numpy==1.21.6
-oauthlib==3.2.2
-opencv-python==4.5.3.56
-opencv-python-headless==4.9.0.80
-opt-einsum==3.3.0
+overrides==7.4.0
 packaging==23.2
-pandas==1.3.5
 pandocfilters==1.5.0
 parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.5.0
-pkgutil_resolve_name==1.3.10
-prometheus-client==0.17.1
+platformdirs==4.1.0
+prometheus-client==0.19.0
 prompt-toolkit==3.0.43
-protobuf==3.19.6
+protobuf==4.21.12
 psutil==5.9.7
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
+pure-eval==0.2.2
 pycparser==2.21
-pycryptodomex==3.20.0
-pydicom==2.4.4
+pycryptodome==3.18.0
+pycryptodomex==3.18.0
 Pygments==2.17.2
-pyparsing==3.1.1
+PyMySQL==0.9.3
 pyperclip==1.8.2
-pyrsistent==0.19.3
 python-dateutil==2.8.2
-pytz==2023.3.post1
-PyWavelets==1.3.0
+python-dotenv==0.7.1
+python-json-logger==2.0.7
 pywin32==306
-pywinpty==2.0.10
+pywinpty==2.0.12
 PyYAML==6.0.1
-pyzmq==24.0.1
-qtconsole==5.4.4
-QtPy==2.4.1
-qudida==0.0.4
+pyzmq==25.1.2
+referencing==0.32.1
 requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-scikit-image==0.19.3
-scikit-learn==1.0.2
-scipy==1.7.3
-seaborn==0.12.2
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.16.2
 Send2Trash==1.8.2
+sender==0.3
 six==1.16.0
 sniffio==1.3.0
-soupsieve==2.4.1
-tensorboard==2.11.2
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.11.0
-tensorflow-estimator==2.11.0
-tensorflow-intel==2.11.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.3.0
-terminado==0.17.1
-threadpoolctl==3.1.0
-tifffile==2021.11.2
+soupsieve==2.5
+stack-data==0.6.3
+terminado==0.18.0
 tinycss2==1.2.1
-tornado==6.2
-tqdm==4.66.1
-traitlets==5.9.0
-typing_extensions==4.7.1
-urllib3==2.0.7
-utils==1.0.2
+tornado==6.4
+traitlets==5.14.1
+types-python-dateutil==2.8.19.20240106
+uri-template==1.3.0
+urllib3==1.22
+visitor==0.1.3
 wcwidth==0.2.13
+webcolors==1.13
 webencodings==0.5.1
-websocket-client==1.6.1
-Werkzeug==2.2.3
-widgetsnbextension==4.0.9
-wrapt==1.16.0
-zipp==3.15.0
-zope.interface==6.1
+websocket-client==1.7.0
+Werkzeug==2.3.7
