--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,91 @@
-gunicorn
-absl-py==0.14.1
-astunparse==1.6.3
-cached-property==1.5.2
-cachetools==4.2.4
-certifi==2021.10.8
-charset-normalizer==2.0.7
-clang==5.0
-click==8.0.3
+Gunicorn
+clipboard
+pygetwindow
+pyperclip==1.8.2
+anyio==4.2.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.2.0
+Babel==2.14.0
+beautifulsoup4==4.12.2
+bleach==6.1.0
+blinker==1.6.2
+certifi==2023.7.22
+cffi==1.16.0
+chardet==3.0.4
+charset-normalizer==3.2.0
+click==8.1.7
 colorama==0.4.6
-Flask==2.0.2
-flatbuffers==1.12
-gast==0.4.0
-google-auth==2.3.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.41.0
-h5py==3.1.0
-idna==3.3
-importlib-metadata==6.7.0
-itsdangerous==2.0.1
-Jinja2==3.0.2
-joblib==1.1.0
-keras==2.6.0
-Keras-Preprocessing==1.1.2
-Markdown==3.3.4
-MarkupSafe==2.0.1
-numpy==1.19.5
-oauthlib==3.1.1
-opt-einsum==3.3.0
-Pillow==9.5.0
-protobuf==3.18.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-regex==2021.10.8
-requests==2.26.0
-requests-oauthlib==1.3.0
-rsa==4.7.2
-scipy==1.7.3
-six==1.15.0
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.6.0
-tensorflow-estimator==2.6.0
-termcolor==1.1.0
-typing-extensions==3.7.4.3
-urllib3==1.26.7
-Werkzeug==2.0.2
-wrapt==1.12.1
-zipp==3.15.0
+comm==0.2.1
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+dominate==2.8.0
+executing==2.0.1
+fastjsonschema==2.19.1
+Flask==2.3.2
+Flask-Bootstrap==3.3.7.1
+fqdn==1.5.1
+idna==3.6
+ipykernel==6.28.0
+ipython==8.19.0
+isoduration==20.11.0
+itsdangerous==2.1.2
+jedi==0.19.1
+Jinja2==3.1.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
+jupyter-events==0.9.0
+jupyter-lsp==2.2.1
+jupyter_client==8.6.0
+jupyter_core==5.7.0
+jupyter_server==2.12.2
+jupyter_server_terminals==0.5.1
+jupyterlab==4.0.10
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.2
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+mistune==3.0.2
+mysql-connector-python==8.1.0
+nbclient==0.9.0
+nbconvert==7.14.0
+nbformat==5.9.2
+nest-asyncio==1.5.8
+notebook==7.0.6
+notebook_shim==0.2.3
+overrides==7.4.0
+packaging==23.2
+pandocfilters==1.5.0
+parso==0.8.3
+platformdirs==4.1.0
+prometheus-client==0.19.0
+prompt-toolkit==3.0.43
+protobuf==4.21.12
+psutil==5.9.7
+pure-eval==0.2.2
+pycparser==2.21
+pycryptodome==3.18.0
+pycryptodomex==3.18.0
+Pygments==2.17.2
+PyMySQL==0.9.3
+python-dateutil==2.8.2
+python-dotenv==0.7.1
+python-json-logger==2.0.7
+PyYAML==6.0.1
+requests==2.31.0
+Send2Trash==1.8.2
+sender==0.3
+six==1.16.0
+urllib3==1.22
+visitor==0.1.3
+wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.7.0
+Werkzeug==2.3.7
